fixing hover on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -248,8 +248,7 @@
 	transition: transform 0.4s;
 }
 
-.no-touch .cs-style-3 figure:hover img,
-.cs-style-3 figure.cs-hover img {
+.cs-style-3 figure:hover img {
 	-webkit-transform: translateY(-50px);
 	-moz-transform: translateY(-50px);
 	-ms-transform: translateY(-50px);
@@ -271,8 +270,7 @@
 	transition: transform 0.4s, opacity 0.1s 0.3s;
 }
 
-.no-touch .cs-style-3 figure:hover figcaption,
-.cs-style-3 figure.cs-hover figcaption {
+.cs-style-3 figure:hover figcaption {
 	opacity: 1;
 	-webkit-transform: translateY(0px);
 	-moz-transform: translateY(0px);
@@ -297,8 +295,7 @@
 	transition: transform 0.4s;
 }
 
-.no-touch .cs-style-2 figure:hover img,
-.cs-style-2 figure.cs-hover img {
+.cs-style-2 figure:hover img {
 	-webkit-transform: translateY(-90px);
 	-moz-transform: translateY(-90px);
 	-ms-transform: translateY(-90px);
